# 1000x

./: .eslintrc.js  .gitignore  Anchor.toml  CHANGELOG_DEV_WALLET_EXEMPTION.md  GOVERNANCE_SUMMARY.md  INCIDENT_RESPONSE_SUMMARY.md  INTEGRATION_TESTS_SUMMARY.md  PROPERTY_TESTS_SUMMARY.md  README.md  RUNBOOK.md  TASK_COMPLETION_SUMMARY.md  TECH_SPEC.md  TODO.md  UNIT_TESTS_SUMMARY.md  governance.md  jest.config.js  package.json  pnpm-lock.yaml  setup_ubuntu.sh  tsconfig.json
.claude/: settings.local.json
.github/workflows/: ci.yml
app/ts/: .env.example  README.md  REGISTRATION_IMPROVEMENTS.md  burner_bot.ts  configure_fee.ts  create_mint.ts  init_hook_config.ts  manual_burn.ts  register_hook_extra_metas.ts  utils.ts  validate_registration.ts  verify_mint_config.ts
app/ts/__tests__/: README.md  burner_bot.test.ts  create_mint.test.ts  setup.ts  utils.test.ts
docs/: GOVERNANCE.md  RUNBOOK.md  TOKENOMICS.md
meteora/studio/config/: dlmm_config.jsonc
ops/: ALERTING.md  burner.service  healthcheck.ts  monitor.sh
programs/1kx_hook/: Cargo.toml
programs/1kx_hook/src/: lib.rs
scripts/: README.md  check_deployment_status.sh  deploy_program_upgrade.sh  emergency_burn.sh  governance_tools.sh  quick_health.sh  reset_service.sh  validate_governance.sh  validate_runbook.sh
tests/: 1kx_hook.ts  governance_test.ts
tests/integration/: README.md  full_flow_test.ts  run-tests.sh  test-config.ts
tests/property/: cap_boundaries.test.ts  cap_boundaries_native.test.ts  cap_boundaries_simple.test.ts  fee_calculations.test.ts  fee_calculations_simple.test.ts
(+3 files in other folders)
